k8s/shopping-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: shopping-app
  labels:
    frontendapp: shoppingwebapp
spec:
  replicas: 1
  selector:
    matchLabels:
      frontendapp: shoppingwebapp
  template:
    metadata:
      labels:
        frontendapp: shoppingwebapp
    spec:
      containers:
        - name: shopping-app-container
          image: shopping-application-frontend:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: shopping-app-service
spec:
  type: ClusterIP
  selector:
    frontendapp: shoppingwebapp
  ports:
    - port: 3000
      targetPort: 3000
