k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: shopping-ingress
spec:
  ingressClassName: nginx
  rules:
    - host: shopping.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: shopping-app-service
                port:
                  number: 3000
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: shopping-server-service
                port:
                  number: 5135
